src/test/ui/impl-trait/suggest-calling-rpit-closure.stderr
error[E0308]: mismatched types
  --> $DIR/suggest-calling-rpit-closure.rs:2:5
   |
LL | fn whatever() -> i32 {
   |                  --- expected `i32` because of return type
LL |     opaque()
   |     ^^^^^^^^ expected `i32`, found opaque type
...
LL | fn opaque() -> impl Fn() -> i32 {
   |                ---------------- the found opaque type
   |
   = note:     expected type `i32`
           found opaque type `impl Fn() -> i32`
help: use parentheses to call this opaque type
   |
LL |     opaque()()
   |             ++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
